@@ -12,12 +12,14 @@ dependent-scripts = true
 eggs = bandersnatch
     flake8
     zest.releaser
+interpreter = py
 
 [requirements]
 recipe = bandersnatch:requirements
 eggs = bandersnatch
 
 [versions]
+blessings=1.5
 cov-core = 1.7
 coverage = 3.6
 distribute = 0.6.36
@@ -31,6 +33,7 @@ pytest = 2.3.5
 pytest-capturelog = 0.7
 pytest-codecheckers = 0.2
 pytest-cov = 1.6
+pytest-timeout=0.3
 requests = 1.2.0
 zc.buildout = 2.1.0
 zc.recipe.egg = 2.0.0
